// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiHeaderBreadcrumb href is rendered 1`] = `
<a
  class="kuiHeaderBreadcrumb"
  href="#"
>
  <div
    class="kuiHeaderBreadcrumb__text"
  />
</a>
`;

exports[`KuiHeaderBreadcrumb is rendered 1`] = `
<a
  aria-label="aria-label"
  class="kuiHeaderBreadcrumb testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="kuiHeaderBreadcrumb__text"
  >
    content
  </div>
</a>
`;

exports[`KuiHeaderBreadcrumb isActive is rendered 1`] = `
<a
  class="kuiHeaderBreadcrumb kuiHeaderBreadcrumb-isActive"
>
  <div
    class="kuiHeaderBreadcrumb__text"
  />
</a>
`;
